# leverage-worker

./: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt  run_paper.sh
.claude/: settings.local.json
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  codebase_structure.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
data/ml_models/: volatility_direction_price_position_20260118.pkl
docs/: architecture.md
examples_llm/: kis_auth.py
leverage_worker/: __init__.py  main.py
leverage_worker/config/: __init__.py  settings.py  trading_config.yaml
leverage_worker/core/: __init__.py  daily_liquidation.py  emergency.py  health_checker.py  recovery_manager.py  scheduler.py  session_manager.py  trading_engine.py
leverage_worker/data/: __init__.py  daily_candle_repository.py  database.py  market_data.db  minute_candle_repository.py  price_repository.py  stock_repository.py  trading_paper.db
leverage_worker/ml/: __init__.py  config.py  data_utils.py  ensemble_classifier.py  features.py  features_limit_order.py  signal_generator.py  two_stage_classifier.py
leverage_worker/notification/: __init__.py  daily_report.py  slack_notifier.py
leverage_worker/scalping/: __init__.py  boundary_tracker.py  executor.py  models.py  price_tracker.py
leverage_worker/scripts/: README.md  check_candle_integrity.py  collect_historical_data.py  refill_incomplete_data.py
leverage_worker/strategy/: __init__.py  base.py  registry.py
leverage_worker/tests/: __init__.py  test_settings.py
leverage_worker/trading/: __init__.py  (+3 more)
(+39 files in other folders)
