[project]
name = "kis-github"
version = "1.0.0"
description = "korea investment open api sample codes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=1.3.0",
    "pycryptodome>=3.23.0",
    "pyqt6>=6.9.1",
    "pyside6>=6.9.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "websockets>=15.0.1",
    "lightgbm>=3.3.0",
    "scikit-learn>=1.0.0",
    "pyarrow>=23.0.0",
    "xgboost>=1.5.0",
    "numpy>=1.21.0",
    "joblib>=1.1.0",
    "catboost>=1.2.8",
]
